fixing side bar white space

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -59,8 +59,7 @@ a.portfolio-box:hover{
  size: 20%;
 }
 hr{
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 20px;
 }
 .list-group{
     font-weight: 500;
